web/static/css/style.css
*{
    font-family: sans-serif;
}

htlm, body {
    height: 100%;
    width: 100%;
}

img{
    border-width:3px;
    border-style:solid;
    border-color:#ffffff;
}

.attribue{
    font-style:italic; 
    color:gray;
}

.navbar{
    background-color: rgba(0, 0, 0, 0.6);
    padding: 0.5% 0;
    font-size: 1.2em;
    border-style: none;
    box-shadow: 0px 2px 94px 0px rgba(0,0,0,0.75);
}

.navbar-brand{
    max-height: 50px;
    padding: 0 15px 5px;
}

.navbar-default .navbar-nav li a {
    color: #d5d5d5;
    max-height: 50px;
}

.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a.actif{
    transition: color 1s;
    color: white;
}

.landing-text{
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    padding-top: 20%; /*ne devrait pas etre la*/
    padding-bottom: 30%;
}
.landing-text h1{
    color: white;
    font-size: 500%;
    text-shadow: 0 1px 0 #ccc,
               0 2px 0 #c9c9c9,
               0 3px 0 #bbb,
               0 4px 0 #b9b9b9,
               0 5px 0 #aaa,
               0 6px 1px rgba(0,0,0,.1),
               0 0 5px rgba(0,0,0,.1),
               0 1px 3px rgba(0,0,0,.3),
               0 3px 5px rgba(0,0,0,.2),
               0 5px 10px rgba(0,0,0,.25),
               0 10px 10px rgba(0,0,0,.2),
               0 20px 20px rgba(0,0,0,.15); 
}

.landing-text h3{
    color: white;
    font-size: 300%;
    text-shadow: 0 1px 0 #ccc,
               0 2px 0 #c9c9c9,
               0 3px 0 #bbb,
               0 4px 0 #b9b9b9,
               0 5px 0 #aaa,
               0 6px 1px rgba(0,0,0,.1),
               0 0 5px rgba(0,0,0,.1),
               0 1px 3px rgba(0,0,0,.3),
               0 3px 5px rgba(0,0,0,.2),
               0 5px 10px rgba(0,0,0,.25),
               0 10px 10px rgba(0,0,0,.2),
               0 20px 20px rgba(0,0,0,.15); 
}

.padding{
    padding: 80px 0;
}

.padding img{
    width: 80%;
}

.soustitre{
color: #fff;
font-weight: bold;
font-family: Helvetica;
text-shadow: 0 1px 0 #ccc, 
    0 2px 0 #c9c9c9, 
    0 3px 0 #bbb, 
    0 4px 0 #b9b9b9, 
    0 5px 0 #aaa, 
    0 6px 1px rgba(0,0,0,.1), 
    0 0 5px rgba(0,0,0,.1), 
    0 1px 3px rgba(0,0,0,.3), 
    0 3px 5px rgba(0,0,0,.2), 
    0 5px 10px rgba(0,0,0,.25), 
    0 10px 10px rgba(0,0,0,.2), 
    0 20px 20px rgba(0,0,0,.15);
}

footer{
    background-color: #3A3A3A;
    display: table;
    height: 5em;
    width: 100%;
}

footer p{
    color: white;
    display: table-cell;
    vertical-align: center;
    padding-top: 25px;
}

@media(max-width: 768px){
    .landing-text h1{
        font-size: 300%;
    }
    .landing-text h3{
        font-size: 200%;
    }
    .padding{
        padding: 20px 0 20px;
    }
    iframe{
        width: 280px;
        height: 200px;
    }
    footer{
        height: 3em;
    }
    footer p{
        padding-top: 15px;
    }
}

#parallax{
    background: url("../images/routeMontage.jpeg") no-repeat center center fixed;
    display: table;
    height: 100%;
    width: 100%;
    position: relative;
    background-size: cover;
    z-index: -1;
}

#imgAccueil{
    margin-top: -10em;
    border-style:none;
    max-width: 25em;
    box-shadow: none;
}

#fixed{
    background: url("../images/routeMontage2.jpeg") no-repeat center center fixed;
    display: table;
    height: 40%;
    width: 100%;
    position: relative;
    padding-top: 30%;
    background-size: cover;
}

#contenu2{
    background-color: grey;
    color: white;
}
#logo{
    max-height: 50px;
    border-style: none;
    border-radius: 0px;
    box-shadow: none;
}
.erreur *{
    color : red;
}
#alerteNum{
    color : red;
    font-family: Helvetica;
    margin-bottom: 5px;
    font-size: 20px;
    
}
/** --------------- Login et profil---------------*/
#panelLogin, #panelProfil {
    display: none;
    text-align: center;
    height: 272px;
    float : right;
    position:absolute;
    margin-top: 10px;
    padding-top: 10px;
    background-color: rgba(0, 0, 0, 0.6);
    border-style: none;
    box-shadow: 0px 2px 94px 0px rgba(0,0,0,0.75);
    color : white;
}
#panelLogin .lblLink:hover,#panelProfil .lblLink:hover{
    color : #3399ff;
}
#panelLogin button{
   width: 50%;
}
/** ---------------Inscription---------------*/
#panelInscription {
    display: none;
    text-align: center;
    height: 600px;
    float : right;
    position:absolute;
    margin-top: 10px;
    padding-top: 10px;
    background-color: rgba(0, 0, 0, 0.6);
    border-style: none;
    box-shadow: 0px 2px 94px 0px rgba(0,0,0,0.75);
    color : white;
}
#panelInscription button{
   width: 50%;
}

/** ---------------Recherche---------------*/
#recherchePanel{
    background: url("../images/routeMontage.jpeg") no-repeat center center fixed;
    display: table;
    height: 100%;
    width: 100%;
    position: relative;
    background-size: cover;
    z-index: -1;
}
#recherchePanel label{
    color : white;
}
#recherchePanel #filtre{
    display: inline-block;
    margin-top:5px;
}
#recherchePanel #mapContainer{
    background : rgba(0, 0, 0, 0.6);
    margin : 10% 5% 0 5%;
    height: 570px;
}
#recherchePanel #mapRecherche{
    height: 500px;
    width: 94%;
    margin : 0 0 3% 3%;
   
}
#recherchePanel #tblSecteur{
    background : rgba(0, 0, 0, 0.6);
    margin : 5% 5% 40% 5%;
    height: 250px;
}
#recherchePanel table {
    font-family: Helvetica;
    border-collapse: collapse;
    width: 94%;
    margin : 3% 0 3% 3%;
    background-color: white;
}

/** --------------- Messagerie ---------------*/
#messageriePanel{
    background: url("../images/routeMontage.jpeg") no-repeat center center fixed;
    display: table;
    height: 100%;
    width: 100%;
    position: relative;
    background-size: cover;
    z-index: -1;
}
#messagerieContainer{
    background : rgba(0, 0, 0, 0.6);
    margin : 10% 10% 5% 10%;
    height: 585px;
}
/** --------------- Cote gauche ---------------*/
#messagesContainer{
    font-family: Helvetica;
    margin : 15px 0px 0px 0px;
    border:solid;
    border-color:rgba(0,0,0,0.8);
    margin-right: -10px;
}
#messagesHead{
    font-family: Helvetica;
    background : rgba(0,0,0,0.8);
    color : white;
    font-size: 28px;
    text-align: center;
    margin-left: -15px;
    padding-left:7px;
    width: 345px
}
#messages{
    background : rgba(211,211,211,0.8);
    color : black;
    height: 510px;
    margin-left: -15px;
    padding-left:7px;
    width: 345px;
    overflow-y:hidden;
}
.unMessage{
    background : white;
    border: outset black 1px;
    margin : 5px 0px 5px 0px;
    padding:5px;
    height:75px;
}
.unMessageSelect{
    background : gray;
    border: inset black 1px;
    margin : 5px 0px 5px 0px;
    padding:5px;
    height:75px;
}
.imgMessage img{
    border-style:ridge;
    margin-left:-10px;
    margin-top:2px;
    width: 60px;
}
/** --------------- Cote droit ---------------*/
#messageContainer{
    margin-top : 15px;
}
.messageHead{
    background : lightgrey;
    color : black;
    height: 60px;
    font-size: 23px;
    text-align: center;
    vertical-align: central;
}
.messageHead a{
    font-family: Helvetica;
    color : black;
}
.messageHead a:hover{
    color : grey;
}
#messageBody{
    background : white;
    color : black;
    height: 490px;
}
#messageEnvoyeur,
#messageTitre,
#messageTexte{
    margin-left:7px;
    margin-right:5px;
    height:40px;
}
#messageTexte p{
    margin-left:7px;
}
hr{
    margin-top:-15px;
    margin-bottom:10px;
}
#btnEnvoyerMessage{
    position: absolute;
    right:30px;
    bottom:40px;
}
.notif{
    font-size: 18px;
    margin-top: 4em;
    margin-bottom:-100px;
    position:relative;
    z-index:100;
}

